# uav-netsim

./: .gitignore  Dockerfile.ns3  Dockerfile.uav  LICENSE.txt  README.md  docker-compose.yml  docker_setup.sh  ns3_veth_setup.sh  px4_script.sh  requirements.txt  settings.json  uav_veth_setup.sh
result/2024-11-06/: drone_01-05-21.csv  ground_control_01-05-20.csv
src/airsim_interfaces/: CMakeLists.txt  package.xml
src/ns3_drone_visualizer/: 3d_visualizer.py  CMakeLists.txt  package.xml
src/ns3_drone_visualizer/scripts/: position_csv.py
src/ns3_drone_visualizer/src/: position_visualizer.cpp  utils.cpp  utils.hpp
src/ns3_interfaces/: CMakeLists.txt  package.xml
src/ns3_interfaces/msg/: IcmpMsg.msg  Ns3PositionMsg.msg
src/uav_gs/: CMakeLists.txt  package.xml
src/uav_gs/launch/: launch_ping.py
src/uav_gs/src/: drone.cpp  drone.hpp  ground_station.cpp  ground_station.hpp  ping_publisher.py  ping_subscriber.py  uav_gs.cpp
